--- a/public/index.jade
+++ b/public/index.jade
@@ -13,10 +13,17 @@ html(lang="en")
             .screen
                 p Touch me anywhere to get started.
             .screen
-                p Oooo, that’s it.
+                p Oooo, 
+                    br 
+                    | that’s it.
+                br
                 p Touch me again.
             .screen
-                p That’s how I like it.
+                p Oooo, yeah!
+                br
+                p That’s how 
+                    br 
+                    | I like it.
             .screen
                 p Now your turn.
             .screen
@@ -36,6 +43,7 @@ html(lang="en")
                 p I want to hear you make a sound in my microphone.
             .screen
                 p Are you ready?
+                br  
                 br  
                 p
                   .selection I’m ready
